js/src/modules/style.scss
$cyan: #00A2D9;
$berry: #B7295A;
$green: #7AB800;
$yellow: #F2AF00;

html, body {
  position: relative;
  display: flex;
  min-width: 100vw;
  min-height: 100vh;
  padding: 0;
  margin: 0;
  font-family: 'Fira Mono', monospace;
  background: #000;
  overflow: hidden;
}

@keyframes bg {
  0% { background-color: $cyan; }
  33% { background-color: $berry; }
  66% { background-color: $green; }
  100% { background-color: $cyan; }
}
* {
  border: 0;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  margin: 0;
}

.preloader {
  position: absolute;
  pointer-events: none;
  transition: all .2s;
  background: rgba(0,0,0,.85);
  width: 100%;
  height: 100vh;
  z-index: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  color:rgba(255,255,255,.5);
  flex-direction: column;
  .spinner {
    margin: auto 0;
    width: 70px;
    text-align: center;
  }
  
  .spinner > div {
    width: 18px;
    height: 18px;
    background-color: $yellow;
  
    border-radius: 100%;
    display: inline-block;
    animation: sk-bouncedelay 1.4s infinite ease-in-out both;
  }
  
  .spinner .bounce1 {
    animation-delay: -0.32s;
  }
  
  .spinner .bounce2 {
    animation-delay: -0.16s;
  }
  
  @keyframes sk-bouncedelay {
    0%, 80%, 100% { 
      transform: scale(0);
    } 40% { 
      transform: scale(1.0);
    }
  }
}
.timer-app {
  z-index: 2;
}
.timer-container {
  position: relative;
  width: 100vw;
  min-height: 100vh;
  pointer-events: none;
  background: black;
}

.progress {
  display: inline-block;
  height: 100vh;
  animation: bg 21s infinite;
  width: 0px;
  pointer-events: none;
  transition: opacity .2s, width 1s linear;
}
.message {
  font-size: calc(5vw + 3px);
  pointer-events: none;
}
.timer_area {
  font-size: calc(15vw + 5px);
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color:#FFF;
}
.timer {
  pointer-events: none;
}
.icon {
  width: 5vw;
  height: 5vw;
}
.toggle-apps {
  cursor: pointer;
  .timer {
    width: calc(5vw + 10px);
    height: calc(5vw + 10px);
    filter: drop-shadow(0px 0px 3px #000000); 
    margin-right: 5px;
    margin-top: 10px;
    opacity: 1;
  }
  .close {
    width: calc(4vw + 10px);
    height: calc(4vw + 10px);
    margin-right: 10px;
    margin-top: 10px;
    opacity: .5;
  }
}
.buttons {
  display: flex;
  justify-content: center;
  align-items: center;
}
.btn {
  display: flex;
  align-items: center;
  opacity: .25;
  cursor: pointer;
}
.halt {
  margin-left: 8vw;
}
.btn .txt {
  font-size: calc(2vw + 5px);
  padding-left: 1vw;
}
.isHidden {
  display: none!important;
}
.toggle-apps {
  position: absolute;
  top: 0;
  right: 0;
  opacity: 0;
  z-index: 90;
  transition: opacity .1s;
}

.photo-app {
  z-index: 1;
  display: flex;
  width: 100vw;
  height: 100vh;
  justify-content: center;
  align-items: center;
  color:#FFF;
  overflow: hidden;
  .auto-play {
    cursor: pointer;
    position: absolute;
    top: calc(50% - 15vw); 
    left: calc(50% - 15vw);
    width: 30vw;
    height: 30vw;
    z-index: 90;
    display: flex;
    color:#FFF;
    justify-content: center;
    align-items: center;
    opacity: 0;
    transition: opacity .3s;
    svg.resume {
      filter: drop-shadow(0px 0px 3px #000000); 
      width: 30vw;
      height: 30vw;
    }
  }
  
  .main-carousel {
    width: 100%;
    height: 100%;
  }
  .flickity-viewport {
    height: 100%!important;
  }
  .carousel-cell {
    width: 100%;
    height: 100%;
    background: {
      size: cover!important;
      position: center!important;
      repeat: no-repeat!important;
    }
  }
  
  .flickity-button {
    display: none;
  }
  .flickity-page-dots {
    display: none;
  }
}

